fixes on mobile and desktop view

--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -6,7 +6,6 @@
 .default-width {
   width: 80%;
   margin: 0 auto;
-  /* margin-top: 68px; */
 }
 
 .content {
@@ -36,7 +35,7 @@
   font-family: 'Avenir LT Std';
   font-style: normal;
   font-weight: 750;
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: black;
   margin-bottom: 2.5rem;
 }
@@ -55,7 +54,6 @@
 .footer-body p a {
   color: #333;
   line-height: 0.25rem;
-  /* margin-top: 35px; */
 }
 
 .first h1 {
@@ -96,7 +94,6 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 19px;
-  /* margin-right: 50px; */
   margin-top: 30px;
   padding-bottom: 3rem;
 }
@@ -138,7 +135,6 @@
   
   .footer-logo {
     display: flex;
-    /* flex-wrap: wrap; */
     justify-content: space-between;
     flex-direction: column;
     margin: 0rem;
@@ -176,7 +172,6 @@
   .footer-body p a {
     color: #333;
     line-height: 0.25rem;
-    /* margin-top: 35px; */
   }
   
   .first h1 {
@@ -217,7 +212,6 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 19px;
-    /* margin-right: 50px; */
     margin-top: 30px;
     padding-bottom: 3rem;
   }
@@ -241,6 +235,23 @@
     font-size: 20px;
     line-height: 32px;
     color: #333;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+
+  .footer-logoIcon-desktop {
+    display: flex;
+
+    gap: 1rem;
+    margin-bottom: 0rem;
+    margin-left: 3rem;
+  }
+
+  .about-us {
+    display: flex;
+    gap: 20rem;
+    margin-left: 8rem;
   }
 }
 
