--- a/src/app/shared/components/home-landing/home-landing.component.scss
+++ b/src/app/shared/components/home-landing/home-landing.component.scss
@@ -390,8 +390,8 @@ flex-wrap: wrap;
     transform: translate(-50%, 0);
     bottom: 0%;
   }
-  
-  .waitList-botton {
+
+  .bottom-section .waitList-botton {
     padding: 0.5rem 1rem;
     width: 75%;
     margin: 1rem 1rem 3rem 1rem;
@@ -550,7 +550,6 @@ flex-wrap: wrap;
 
   .product-recommendation {
     flex-wrap: nowrap;
-    // flex-direction: row-reverse;
     justify-content: space-between;
     margin-bottom: 5rem;
     margin-top: 10rem;
@@ -559,21 +558,17 @@ flex-wrap: wrap;
   }
   
  .last-section .bottom-section {
-    // flex-direction: row;
     display: flex;
     justify-content: center;
     margin-bottom: 0rem;
-    // margin-top: 4rem;
     width: 50%;
     padding: 6rem 1rem 6rem 0rem;
     gap: 0rem;
   }
  .product-recommendation .bottom-section {
-    // flex-direction: row;
     display: flex;
     justify-content: center;
     margin-bottom: 0rem;
-    // margin-top: 4rem;
     width: 50%;
     padding: 0rem 1rem 0rem 0rem;
     gap: 1rem;
@@ -597,12 +592,9 @@ flex-wrap: wrap;
   }
   
   .buttom-image-one {
-    // position: relative;
     object-fit: cover;
     width: 80%;
-    height: 100%;
-    // margin-left: 1rem;
-  
+    height: 100%;  
   }
   
   .buttom-image-two {
@@ -613,7 +605,7 @@ flex-wrap: wrap;
     width: 100%;
   }
   
-  .waitList-botton {
+  .bottom-section .waitList-botton {
     padding: 0.5rem 1rem;
     width: 50%;
     margin: 1rem 1rem 3rem 1rem;
@@ -628,7 +620,7 @@ flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 5rem;
     flex-wrap: nowrap;
-    padding: 0rem 3rem;
+    padding: 0rem 3rem 3rem 3rem;
     }
   
   .top-section {
@@ -642,11 +634,15 @@ flex-wrap: wrap;
     text-align: left;
     font-size: 2.5rem;
     line-height: 1.25;
-    width: 100%;
+    width: 60%;
+  }
+  .top-section .box-text {
+    width: 70%;
   }
   
   .waitList {
     padding: 0.5rem 1rem;
+    width: 40%;
   }
   
   .image-wrapper {
@@ -664,9 +660,9 @@ flex-wrap: wrap;
   }
 
   .image-three {
-    bottom: -60.6px;
-    left: 0.5rem;
-    width: 5rem;
+    bottom: -100px;
+    left: 1rem;
+    width: 8rem;
   }
   
   .features-wrapper {
@@ -688,11 +684,11 @@ flex-wrap: wrap;
     justify-content: center;
   }
   .rena-box-wrapper1 .box-heading {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
 
   .rena-box-wrapper1 .box-text {
-    font-size: 1rem;
+    font-size: 0.85rem;
   }
 
   .rena-box-wrapper2 {
@@ -706,7 +702,7 @@ flex-wrap: wrap;
   }
 
   .rena-box-wrapper2 .rena-box {
-    width: 21rem;
+    width: 26rem;
   }
   
   .rena-box {
@@ -723,12 +719,11 @@ flex-wrap: wrap;
   }
   
   .box-heading {
-    font-size: 1.125rem;
-    font-weight: 500;
+    font-size: 1.5rem;
   }
   
   .box-text {
-    font-size: 1.25rem;
+    font-size: 0.85rem;
   }
   
   .image-group {
@@ -736,7 +731,7 @@ flex-wrap: wrap;
     flex-wrap: nowrap;
     margin-bottom: 0rem;
     padding: 1rem;
-    width: 45%;
+    width: 35%;
   
     .left-group {
       flex-direction: column;
@@ -752,6 +747,7 @@ flex-wrap: wrap;
   
   .bottom-heading {
     font-size: 2.5rem;
+    width:52%;
   }
   
   .bottom-text {
@@ -759,6 +755,7 @@ flex-wrap: wrap;
   }
   .bottom-text1 {
     font-size: 0.875rem;
+    width: 38%;
   }
 
   .last-section {
@@ -771,7 +768,6 @@ flex-wrap: wrap;
 
   .product-recommendation {
     flex-wrap: nowrap;
-    // flex-direction: row-reverse;
     justify-content: space-between;
     margin-bottom: 5rem;
     margin-top: 10rem;
@@ -780,21 +776,17 @@ flex-wrap: wrap;
   }
   
  .last-section .bottom-section {
-    // flex-direction: row;
     display: flex;
     justify-content: center;
     margin-bottom: 0rem;
-    // margin-top: 4rem;
     width: 50%;
     padding: 6rem 1rem 6rem 0rem;
     gap: 0rem;
   }
  .product-recommendation .bottom-section {
-    // flex-direction: row;
     display: flex;
     justify-content: center;
     margin-bottom: 0rem;
-    // margin-top: 4rem;
     width: 50%;
     padding: 0rem 1rem 0rem 0rem;
     gap: 1rem;
@@ -804,9 +796,13 @@ flex-wrap: wrap;
     line-height: 1.25;
     font-size: 2.25rem;
   }
+
+  .bottom-text {
+    width: 50%;
+  }
   
   .buttom-image-wrapper {
-    width: 50%;
+    width: 35%;
   }
 
   .product-recommendation .left-group, .product-recommendation .right-group{
@@ -818,12 +814,9 @@ flex-wrap: wrap;
   }
   
   .buttom-image-one {
-    // position: relative;
     object-fit: cover;
     width: 80%;
-    height: 100%;
-    // margin-left: 1rem;
-  
+    height: 100%;  
   }
   
   .buttom-image-two {
@@ -833,10 +826,17 @@ flex-wrap: wrap;
     bottom: 0%;
     width: 100%;
   }
+  .last-section .bottom-section {
+    margin: 0rem 0rem -5rem 7rem;
+  }
   
-  .waitList-botton {
+  .bottom-section .waitList-botton {
     padding: 0.5rem 1rem;
-    width: 50%;
-    margin: 1rem 1rem 3rem 1rem;
+    width: 25%;
+    margin: 1rem 1rem 3rem 0rem;
+   
+    a {
+      text-transform: none;
+    }
   }
 }
